--- a/htmls/pageTwo.html
+++ b/htmls/pageTwo.html
@@ -38,13 +38,13 @@
 			<div id="slider" class="mui-slider">
 				<div id="sliderSegmentedControl" class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
 					<a class="mui-control-item mui-active" href="#item1mobile">
-						待办公文
+						企业介绍
 					</a>
 					<a class="mui-control-item" href="#item2mobile">
-						已办公文
+						企业文化
 					</a>
 					<a class="mui-control-item" href="#item3mobile">
-						全部公文
+						企业地址
 					</a>
 				</div>
 				<div id="sliderProgressBar" class="mui-slider-progress-bar mui-col-xs-4"></div>
