--- a/htmls/a.html
+++ b/htmls/a.html
@@ -9,10 +9,7 @@
 		<link rel="stylesheet" href="../css/icons-extra.css" />
 
 		<style type="text/css">
-			#picurl {
-				max-width: 60px;
-				height: 60px;
-			}
+		
 		</style>
 	</head>
 
@@ -22,29 +19,17 @@
 			<h1 class="mui-title">标题</h1>
 		</header>
 		<div class="mui-content">
-			<ul id="OA_task_1" class="mui-table-view mui-table-view-striped mui-table-view-condensed">
-				<li class="mui-table-view-cell'">
-					<div class="mui-slider-handle">
-						<div class="mui-table">
-							<div class="mui-table-cell mui-col-xs-10">
-								<p class="mui-h5 mui-ellipsis">
-									<span>收货人：<span id="truename">邢康</span></span>
-									<span style="float: right;">手机：<span id="telephone">1111112222</span></span>
-								</p>
-									
-								<p class="mui-h5 mui-ellipsis">
-									<span>省市区：<span id="prov">江苏省</span>&nbsp;<span id="city">常州市</span>&nbsp;<span id="country">钟楼区</span></span>
-								</p>
-								<p class="mui-h5 mui-ellipsis">
-									<span>详细地址：<span id="addr">马上有车</span></span>
-									<span style="float: right;">邮编：<span id="zipcode">111111</span></span>
-								</p>
-							</div>
-						</div>
-					</div>
-				</li>
-			</ul>
-
+				<ul class="mui-table-view mui-table-view-radio">
+	<li class="mui-table-view-cell">
+		<a class="mui-navigate-right">Item 1</a>
+	</li>
+	<li class="mui-table-view-cell mui-selected">
+		<a class="mui-navigate-right">Item 2</a>
+	</li>
+	<li class="mui-table-view-cell">
+		<a class="mui-navigate-right">Item 3</a>
+	</li>
+</ul>
 		</div>
 
 		<script src="../js/mui.min.js"></script>
