--- a/htmls/order_submit.html
+++ b/htmls/order_submit.html
@@ -69,6 +69,21 @@
 				border-top: solid 1px #41CEA9;
 				background-color: #FFFFFF;
 			}
+			
+			.mui-popover {
+				min-height: 240px;
+				width: 90%;
+			}
+			
+			#topPopover {
+				margin-top: 60px;
+				margin-left: 4%;
+				margin-right: 5%;
+			}
+			
+			.mui-popover .mui-popover-arrow:after {
+				position: relative;
+			}
 		</style>
 	</head>
 
@@ -79,9 +94,11 @@
 		</header>
 		<div class="mui-content">
 			<p class="class_title">收获地址</p>
-			<ul id="OA_task_1" class="mui-table-view mui-table-view-striped mui-table-view-condensed">
+			<a href="#topPopover">
+				<ul id="OA_task_1" class="mui-table-view mui-table-view-striped mui-table-view-condensed">
 
-			</ul>
+				</ul>
+			</a>
 			<p style="width: 100%;height: 2px;background-color: #41CEA9;"></p>
 			<p class="class_title">商品详情</p>
 			<ul class="mui-table-view">
@@ -102,7 +119,7 @@
 				</li>
 				<li class="mui-table-view-cell">
 					<label>规格：</label>
-					<span id="specification" class="right_text">裸车</span>
+					<span id="specification" class="mui-ellipsis right_text">裸车裸车裸车裸车裸车裸车</span>
 				</li>
 				<li class="mui-table-view-cell">
 					<label>配送方式：</label>
@@ -138,12 +155,95 @@
 			</div>
 		</div>
 
+		<!--选择收货地址-->
+		<div id="topPopover" class="mui-popover">
+			<div class="mui-scroll-wrapper">
+				<div class="mui-scroll">
+					<ul id="addr_to_choose" class="mui-table-view">
+					</ul>
+				</div>
+			</div>
+		</div>
+
 		<script src="../js/mui.min.js"></script>
 		<script type="text/javascript" src="../js/mui.picker.js"></script>
 		<script type="text/javascript" src="../js/mui.poppicker.js"></script>
 		<script type="text/javascript">
 			mui.init();
+			mui('.mui-scroll-wrapper').scroll();
+			mui('body').on('shown', '.mui-popover', function(e) {
+				console.log('shown', e.detail.id);//detail为当前popover元素
+			});
+			mui('#addr_to_choose').on('tap', '.mui-table-view-cell', function(e) {
+				console.log('hidden', e.detail.id);//detail为当前popover元素
+				mui('#topPopover').popover('hide');
+			});
 			mui.plusReady(function() {
+
+				var u_id = localStorage.getItem("u_id");
+
+				mui.ajax('http://api.msyc.com.cn/api/addr/users/' + u_id + '', {
+					dataType: 'json', //服务器返回json格式数据
+					type: 'get', //HTTP请求类型
+					timeout: 10000, //超时时间设置为10秒；
+					success: function(mdata) {
+						var table = document.body.querySelector('#addr_to_choose');
+						for(var i = 0; i < mdata.addrs.length; i++) {
+							var li = document.createElement('li');
+							li.className = 'mui-table-view-cell';
+							li.id = mdata.addrs[i].id;
+
+							li.innerHTML = '<div class="mui-table">' +
+								'<div class="mui-table-cell mui-col-xs-10">' +
+								'<p class="mui-h5 mui-ellipsis">' +
+								'<span>收货人：<span>' + mdata.addrs[i].username + '</span></span>' +
+								'</p>' +
+								'<p class="mui-h5 mui-ellipsis">' +
+								'<span>电话：<span>' + mdata.addrs[i].phone + '</span></span>' +
+								'</p>' +
+								'<p class="mui-h5 mui-ellipsis">' +
+								'<span>省市区：<span>' + mdata.addrs[i].prov + '</span>&nbsp;<span>' + mdata.addrs[i].city + '</span>&nbsp;<span>' + mdata.addrs[i].country + '</span></span>' +
+								'</p>' +
+								'<p class="mui-h5 mui-ellipsis">' +
+								'<span>详细地址：<span>' + mdata.addrs[i].addr + '</span></span>' +
+								'</p>' +
+								'</div>' +
+								'</div>';
+
+							table.appendChild(li);
+						}
+					},
+					error: function(xhr, type, errorThrown) { //异常处理；
+						console.log(type);
+					}
+				});
+
+				//	修改收获地址页面
+				mui('#addr_to_choose').on('tap', '.mui-table-view-cell',
+					function() {
+						var id = this.getAttribute('id');
+						//	替换收获地址
+						mui.ajax('http://api.msyc.com.cn/api/addr/show/' + id + '', {
+							dataType: 'json', //服务器返回json格式数据
+							type: 'get', //HTTP请求类型
+							timeout: 10000, //超时时间设置为10秒；
+							success: function(mdata) {
+//								mui.toast(id);
+								document.getElementById("truename").innerHTML = mdata.addr.username;
+								document.getElementById("telephone").innerHTML = mdata.addr.phone;
+								document.getElementById('prov').innerHTML = mdata.addr.prov;
+								document.getElementById('city').innerHTML = mdata.addr.city;
+								document.getElementById('country').innerHTML = mdata.addr.country;
+								document.getElementById('addr').innerHTML = mdata.addr.addr;
+								document.getElementById('zipcode').innerHTML = mdata.addr.zipcode;
+							},
+							error: function(xhr, type, errorThrown) { //异常处理；
+								console.log(type);
+							}
+						});
+
+					});
+
 				//	上个页面传来的值
 				var self = plus.webview.currentWebview();
 				var goodid = self.goodid;
@@ -338,12 +438,12 @@
 									if(mdata.status == "success") {
 										//	订单提交成功应该返回一个ordernum便于后面进行付款操作
 										mui.toast("提交订单成功！");
-										
+
 										mui.openWindow({
 											url: 'online_pay.html',
-//											extras: {
-//												ordernum:,
-//											},
+											//											extras: {
+											//												ordernum:,
+											//											},
 											createNew: true
 										});
 									} else {
