choose addr in order_submit page; feedbackPage; joininPage;

--- a/htmls/order_detail.html
+++ b/htmls/order_detail.html
@@ -130,7 +130,7 @@
 						mui.confirm('您还未付款，是否现在付款？', '骑境商城', btnArray, function(e) {
 							if(e.index == 1) {
 								mui.openWindow({
-									url: 'online_pay.html',
+									url: 'pay_mode.html',
 									createNew: true
 								});
 
