--- a/htmls/address.html
+++ b/htmls/address.html
@@ -18,6 +18,7 @@
 			<ul id="OA_task_1" class="mui-table-view mui-table-view-striped mui-table-view-condensed">
 
 			</ul>
+			<p id="no_addr" style="margin-top: 20px;display: block;text-align: center;"></p>
 		</div>
 
 		<script src="../js/mui.min.js"></script>
@@ -28,6 +29,9 @@
 				document.getElementById("plus_addr").addEventListener('tap', function() {
 					mui.openWindow({
 						url: 'add_address.html',
+						extras: {
+									whichPage: 0,
+								},
 						createNew: true
 					});
 				});
@@ -41,7 +45,8 @@
 					timeout: 10000, //超时时间设置为10秒；
 					success: function(mdata) {
 						if(mdata == "") {
-							mui.toast("暂无收获地址，点击右上角添加收获地址！");
+//							mui.toast("暂无收获地址，点击右上角添加收获地址！");
+							document.getElementById("no_addr").innerHTML = "暂无收获地址，点击右上角添加收获地址！";
 						} else {
 							var table = document.body.querySelector('#OA_task_1');
 							for(var i = 0; i < mdata.addrs.length; i++) {
