--- a/htmls/order_submit1.html
+++ b/htmls/order_submit1.html
@@ -94,11 +94,11 @@
 		</header>
 		<div class="mui-content">
 			<p class="class_title">收获地址</p>
-			<!--<a href="#topPopover">-->
-			<ul id="OA_task_1" class="mui-table-view mui-table-view-striped mui-table-view-condensed">
+			<a href="#topPopover">
+				<ul id="OA_task_1" class="mui-table-view mui-table-view-striped mui-table-view-condensed">
 
-			</ul>
-			<!--</a>-->
+				</ul>
+			</a>
 			<p style="width: 100%;height: 2px;background-color: #41CEA9;"></p>
 			<p class="class_title">商品详情</p>
 			<ul class="mui-table-view">
@@ -155,20 +155,94 @@
 			</div>
 		</div>
 
+		<!--选择收货地址-->
+		<div id="topPopover" class="mui-popover">
+			<div class="mui-scroll-wrapper">
+				<div class="mui-scroll">
+					<ul id="addr_to_choose" class="mui-table-view">
+					</ul>
+				</div>
+			</div>
+		</div>
+
 		<script src="../js/mui.min.js"></script>
 		<script type="text/javascript" src="../js/mui.picker.js"></script>
 		<script type="text/javascript" src="../js/mui.poppicker.js"></script>
 		<script type="text/javascript">
 			mui.init();
 			mui('.mui-scroll-wrapper').scroll();
+			mui('body').on('shown', '.mui-popover', function(e) {
+				console.log('shown', e.detail.id);//detail为当前popover元素
+			});
+			mui('#addr_to_choose').on('tap', '.mui-table-view-cell', function(e) {
+				console.log('hidden', e.detail.id);//detail为当前popover元素
+				mui('#topPopover').popover('hide');
+			});
 			mui.plusReady(function() {
 
-				document.getElementById("OA_task_1").addEventListener('tap', function() {
-					mui.openWindow({
-						url: 'choose_addr.html',
-						createNew: true,
-					});
+				var u_id = localStorage.getItem("u_id");
+
+				mui.ajax('http://api.msyc.com.cn/api/addr/users/' + u_id + '', {
+					dataType: 'json', //服务器返回json格式数据
+					type: 'get', //HTTP请求类型
+					timeout: 10000, //超时时间设置为10秒；
+					success: function(mdata) {
+						var table = document.body.querySelector('#addr_to_choose');
+						for(var i = 0; i < mdata.addrs.length; i++) {
+							var li = document.createElement('li');
+							li.className = 'mui-table-view-cell';
+							li.id = mdata.addrs[i].id;
+
+							li.innerHTML = '<div class="mui-table">' +
+								'<div class="mui-table-cell mui-col-xs-10">' +
+								'<p class="mui-h5 mui-ellipsis">' +
+								'<span>收货人：<span>' + mdata.addrs[i].username + '</span></span>' +
+								'</p>' +
+								'<p class="mui-h5 mui-ellipsis">' +
+								'<span>电话：<span>' + mdata.addrs[i].phone + '</span></span>' +
+								'</p>' +
+								'<p class="mui-h5 mui-ellipsis">' +
+								'<span>省市区：<span>' + mdata.addrs[i].prov + '</span>&nbsp;<span>' + mdata.addrs[i].city + '</span>&nbsp;<span>' + mdata.addrs[i].country + '</span></span>' +
+								'</p>' +
+								'<p class="mui-h5 mui-ellipsis">' +
+								'<span>详细地址：<span>' + mdata.addrs[i].addr + '</span></span>' +
+								'</p>' +
+								'</div>' +
+								'</div>';
+
+							table.appendChild(li);
+						}
+					},
+					error: function(xhr, type, errorThrown) { //异常处理；
+						console.log(type);
+					}
 				});
+
+				//	修改收获地址页面
+				mui('#addr_to_choose').on('tap', '.mui-table-view-cell',
+					function() {
+						var id = this.getAttribute('id');
+						//	替换收获地址
+						mui.ajax('http://api.msyc.com.cn/api/addr/show/' + id + '', {
+							dataType: 'json', //服务器返回json格式数据
+							type: 'get', //HTTP请求类型
+							timeout: 10000, //超时时间设置为10秒；
+							success: function(mdata) {
+//								mui.toast(id);
+								document.getElementById("truename").innerHTML = mdata.addr.username;
+								document.getElementById("telephone").innerHTML = mdata.addr.phone;
+								document.getElementById('prov').innerHTML = mdata.addr.prov;
+								document.getElementById('city').innerHTML = mdata.addr.city;
+								document.getElementById('country').innerHTML = mdata.addr.country;
+								document.getElementById('addr').innerHTML = mdata.addr.addr;
+								document.getElementById('zipcode').innerHTML = mdata.addr.zipcode;
+							},
+							error: function(xhr, type, errorThrown) { //异常处理；
+								console.log(type);
+							}
+						});
+
+					});
 
 				//	上个页面传来的值
 				var self = plus.webview.currentWebview();
@@ -182,26 +256,6 @@
 				var weight = self.weight;
 				var zipcode;
 
-				//	判断是否从选择收获地址页面传来
-				window.addEventListener('myevent', function(event) {
-					var truename = event.detail.truename;
-					document.getElementById("truename").innerHTML = truename;
-					var telephone = event.detail.telephone;
-					document.getElementById("telephone").innerHTML = telephone;
-					var prov = event.detail.prov;
-					document.getElementById("prov").innerHTML = prov;
-					var city = event.detail.city;
-					document.getElementById("city").innerHTML = city;
-					var country = event.detail.country;
-					document.getElementById("country").innerHTML = country;
-					var addr = event.detail.addr;
-					document.getElementById("addr").innerHTML = addr;
-					var zipcode = event.detail.zipcode;
-					document.getElementById("zipcode").innerHTML = zipcode;
-
-					//					mui.toast(truename);
-				});
-
 				//	获取默认收货地址
 				var u_id = localStorage.getItem("u_id");
 				mui.ajax('http://api.msyc.com.cn/api/addr/users/' + u_id + '', {
@@ -211,14 +265,17 @@
 					success: function(mdata) {
 						if(mdata == "") {
 
-							mui.alert('暂无收获地址，请添加收获地址', '骑境商城', function() {
-								mui.openWindow({
-									url: 'add_address.html',
-									extras: {
-										whichPage: 2
-									},
-									createNew: true
-								});
+							var btnArray = ['否', '是'];
+							mui.confirm('暂无收获地址，现在添加收获地址？', '骑境商城', btnArray, function(e) {
+								if(e.index == 1) {
+									mui.openWindow({
+										url: 'add_address.html',
+										createNew: true
+									});
+
+								} else {
+									mui.toast("取消。。");
+								}
 							});
 
 						} else {
@@ -257,14 +314,18 @@
 
 							//	通过count和数组长度对比观察是否存在默认收获地址
 							if(mdata.addrs.length == count) {
+								var btnArray = ['否', '是'];
+								mui.confirm('暂无默认收获地址，现在添加默认收获地址？', '骑境商城', btnArray, function(e) {
+									if(e.index == 1) {
+										mui.openWindow({
+											url: 'address.html',
+											createNew: true
+										});
 
-								mui.alert('暂无默认收获地址，请添加默认收获地址', '骑境商城', function() {
-									mui.openWindow({
-										url: 'choose_addr.html',
-										createNew: true
-									});
+									} else {
+										mui.toast("取消。。");
+									}
 								});
-
 							}
 
 						}
@@ -379,7 +440,10 @@
 										mui.toast("提交订单成功！");
 
 										mui.openWindow({
-											url: 'pay_mode.html',
+											url: 'online_pay.html',
+											//											extras: {
+											//												ordernum:,
+											//											},
 											createNew: true
 										});
 									} else {
