--- a/htmls/pageFour.html
+++ b/htmls/pageFour.html
@@ -6,6 +6,7 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
+		<link rel="stylesheet" href="../css/iconfont.css" />
 
 		<style type="text/css">
 			.mui-content {
@@ -30,8 +31,8 @@
 				width: 4em;
 				height: 4em;
 				padding: 0px;
-				border-radius: 50%;
-				border: 2px solid white;
+				/*border-radius: 50%;*/
+				/*border: 2px solid white;*/
 				/*color: gray;*/
 				margin: 0px auto;
 				margin-bottom: 10px;
@@ -48,7 +49,8 @@
 			<div class="headImg">
 				<div class="touxiang">
 					<div>
-						<span id="touxiangimg" class="mui-icon mui-icon-person" style="font-size: 3.8em; color: white;"></span>
+						<!--<span id="touxiangimg" class="mui-icon iconfont icon-user-boy" style="font-size: 3.8em; "></span>-->
+						<img src="../images/aaa.jpg" style="width: 65px;height: 65px;border: 2px solid #FFFFFF00;border-radius: 50%;"/>
 					</div>
 					<span id="username">用户名</span>
 				</div>
@@ -136,6 +138,42 @@
 							}
 						});
 
+					}
+
+				});
+				
+				//	加盟我们
+				document.getElementById("joinIn").addEventListener('tap', function() {
+
+					if(localStorage.getItem("login_state") == 0) {
+						mui.toast("您还未登录，请先登录！");
+						mui.openWindow({
+							url: 'login.html',
+							createNew: true
+						});
+					} else {
+						mui.openWindow({
+							url: 'join_in.html',
+							createNew: true
+						});
+					}
+
+				});
+				
+				//	用户反馈
+				document.getElementById("feedback").addEventListener('tap', function() {
+
+					if(localStorage.getItem("login_state") == 0) {
+						mui.toast("您还未登录，请先登录！");
+						mui.openWindow({
+							url: 'login.html',
+							createNew: true
+						});
+					} else {
+						mui.openWindow({
+							url: 'feedback.html',
+							createNew: true
+						});
 					}
 
 				});
