--- a/htmls/join_in_requirement.html
+++ b/htmls/join_in_requirement.html
@@ -6,35 +6,19 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
-		<style type="text/css">
-			img{
-				width: 100%;
-				margin-bottom: -5px;
-			}
-			#joinin {
-				width: 94%;
-				height: 45px;
-				margin: -18% auto 0px auto;
-				display: block;
-				background-color: #EB470A;
-				border-color: #EB470A;
-			}
-		</style>
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav" style="background-color: #41CEA9;">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="color: #FFFFFF;"></a>
-			<h1 class="mui-title" style="color: #FFFFFF;">加盟我们</h1>
+			<h1 class="mui-title" style="color: #FFFFFF;">加盟条件</h1>
 		</header>
 		<div class="mui-content">
-		    <img src="../images/joinin.JPG" />
-		    <button id="joinin" class="mui-btn mui-btn-primary" type="button">立即申请</button>
+		    
 		</div>
-		
 		<script src="../js/mui.min.js"></script>
 		<script type="text/javascript">
-			mui.init()
+			mui.init();
 		</script>
 	</body>
 
