--- a/htmls/main.html
+++ b/htmls/main.html
@@ -124,19 +124,19 @@
 	<body>
 		<nav id="nav" class="mui-bar mui-bar-tab">
 			<a id="a1" class="mui-tab-item mui-active">
-				<span class="mui-icon mui-icon-home"></span>
+				<span class="mui-icon mui-icon-home-filled"></span>
 				<span class="mui-tab-label">首页</span>
 			</a>
 			<a id="a2" class="mui-tab-item">
-				<span class="mui-icon mui-icon-star"></span>
+				<span class="mui-icon mui-icon-star-filled"></span>
 				<span class="mui-tab-label">企业宣传</span>
 			</a>
 			<a id="a3" class="mui-tab-item">
-				<span class="mui-icon mui-icon-chatboxes"></span>
+				<span class="mui-icon mui-icon-chatboxes-filled"></span>
 				<span class="mui-tab-label">新闻公告</span>
 			</a>
 			<a id="a4" class="mui-tab-item">
-				<span class="mui-icon mui-icon-gear"></span>
+				<span class="mui-icon mui-icon-gear-filled"></span>
 				<span class="mui-tab-label">个人中心</span>
 			</a>
 		</nav>
