--- a/htmls/my_orders_sub.html
+++ b/htmls/my_orders_sub.html
@@ -157,7 +157,8 @@
 							id: 'order_detail.html',
 							extras: {
 								orderid: id
-							}
+							},
+							createNew:true
 						});
 					});
 			});
