--- a/htmls/a.html
+++ b/htmls/a.html
@@ -35,6 +35,45 @@
 		<script src="../js/mui.min.js"></script>
 		<script type="text/javascript">
 			mui.init();
+			
+			var baidutime = JSON.parse(result).stime;
+											var data_uri = signaturePad.toDataURL('image/jpeg');
+											var base64Data = data_uri.replace(/^data:image\/\w+;base64,/, "");
+											$('#form_pad').ajaxSubmit({
+												type: "Post",
+												url: configManager.getRestApiURL() + '/signUploadService',
+												async: false,
+												data: {
+													countryCode: countrycode,
+													countryName: countryname,
+													latitude: coords.latitude,
+													longitude: coords.longitude,
+													actionTime: baidutime,
+													userId: Request['userId'],
+													uploadIOSPicture: base64Data,
+													workRecordId: Request['id']
+												},
+												dataType: 'json',
+												timeout: 30000,
+												success: function(data) {
+													var json = data;
+													if ('200' == json.status) {
+														winnativeManager.toast($.i18n.prop('Submitsuccess'));
+														windowManager.openWindow(
+															'newindex.html', 'newindex.html?lang=' + localStorage.getItem("language") + '&userId=' + localStorage.getItem("userId"));
+													} else {
+														winnativeManager.toast($.i18n.prop('Submitfailed'));
+													}
+													winnativeManager.wattingClose();
+												},
+												error: function(xhr, type, errorThrown) {
+													winnativeManager.toast($.i18n.prop('Serverconnectionisabnormal'));
+													winnativeManager.wattingClose();
+												}
+											});
+
+			
+			
 		</script>
 	</body>
 
