--- a/htmls/my_orders_sub.html
+++ b/htmls/my_orders_sub.html
@@ -87,7 +87,7 @@
 				setTimeout(function() {
 					var view = plus.webview.getWebviewById('my_orders_sub.html');
 					view.reload();
-					mui.toast("刷新成功！");
+					mui.toast("刷新中请稍候...");
 					mui('#pullrefresh').pullRefresh().endPulldownToRefresh(); //refresh completed
 				}, 500);
 			}
