--- a/htmls/pageFour.html
+++ b/htmls/pageFour.html
@@ -50,7 +50,7 @@
 				<div class="touxiang">
 					<div>
 						<!--<span id="touxiangimg" class="mui-icon iconfont icon-user-boy" style="font-size: 3.8em; "></span>-->
-						<img src="../images/aaa.jpg" style="width: 65px;height: 65px;border: 2px solid #FFFFFF00;border-radius: 50%;"/>
+						<img src="../images/iLogo.png" style="width: 65px;height: 65px;border: 2px solid #FFFFFF00;border-radius: 50%;"/>
 					</div>
 					<span id="username">用户名</span>
 				</div>
